--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 	<p>Lauren Armstrong is a recent college graduate living in Boston. She was born and raised in Seattle, WA, where she developed her love of the outdoors, books, and cutting-edge technology. In fall of 2009 she relocated to Providence, RI, to begin her undergraduate studies at Brown University. She graduated in 2013 from Brown with a degree in Comparative Literature. Although her studies at Brown focused on literary theory and French literary history, she also was able to find time to take advantage of Brown’s connection to the Rhode Island School of Design. She attended several seminars and enrolled in a semester long course in graphic design where she studied typography, print production methods, and the basics of copy writing. Upon graduation, Lauren decided to pursue a summer education program in architecture at the Harvard Graduate School of Design. The summer program confirmed her interest in architectural study, but Lauren was not yet confident that that interest would translate to professional architectural life. In order to further investigate architecture, instead of applying directly to graduate school in architecture, Lauren found an internship at a local architectural firm, Peter Rose + Partners. With no formal knowledge of architecture beyond the summer program at Harvard, Lauren’s role at the firm was concentrated in marketing work. </p>
 
-	<img src=”https://production-startupschool.s3.amazonaws.com/uploads/laurenarmstrong_headshot2.jpg” />
+	<img src="https://production-startupschool.s3.amazonaws.com/uploads/laurenarmstrong_headshot2.jpg” />
 
 </body>
 </html>
