Coffee page css additions

--- a/Coffee/index.html
+++ b/Coffee/index.html
@@ -2,9 +2,19 @@
 <html>
 <head>
 	<title>Dream Beans Caffe</title>
+	<meta charset="utf-8">
+	<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
 </head>
 <body>
-	<h1>Dream Beans Caffe</h1>
+	<header>
+	<h1>
+	<div id="dream">
+	dream</div>
+	<div class="title">
+	Beans
+	</div>
+	<div class="title">Caffe</div>
+</h1>
 <nav>
 	<ul>
 		<li>about</li>
@@ -13,7 +23,7 @@
 		<li>contact</li>
 	</ul>
 </nav>
-
+</header>
 <section>
 	<article>
 		<h2>Organic. Crema. Barista</h2>
@@ -21,9 +31,7 @@
 
 		<p>A robust, extra shop, espresso eu, cultivar ut barista whipped extra. Et galão, robusta mocha froth dark percolator. Flavour aftertaste, cup froth, chicory sugar barista roast robust caramelization. Macchiato single shot steamed, ristretto acerbic coffee aroma mocha at dripper.</p>
 	</article>	
-</section>
 
-<section>
 	<article>
 		<h2>Coffee. Bar. French Press</h2>
 		<p>trifecta, organic kopi-luwak mocha redeye et instant. Crema, at, french press, americano bar trifecta dark breve carajillo caffeine wings. Cinnamon cappuccino cultivar organic, filter in, lungo, cultivar strong acerbic qui galão. Cultivar aromatic, saucer shop, latte in sugar crema blue mountain aftertaste.</p>
@@ -32,7 +40,7 @@
 </section>
 
 <footer>
-<p>123 Latte Lane, Javaville - 555-423-1234
+<p>123 Latte Lane, Javaville - 555-423-1234 </br>
 ©Dream Beans Caffe 2013</p>
 </footer>
 </body>
