Style and content updates to Personal Profile at lbarmstrong.com

--- a/index.html
+++ b/index.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 
- 
-
 <html>
 <head>
-
-	<title>Lauren Armstrong</title>
-
+	<title>Lauren Bowes Armstrong</title>
+	<meta charset="utf-8">
+	<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
 </head>
 
 <body>
+<nav>
+	<ul class="menu">
+		<li>about</li>
+		<li>portfolio</li>
+		<li>contact</li>
+	</ul>
+</nav>
 
-	<h1>About Lauren Armstrong</h1>
+	<h1>Hi. I'm Lauren.</h1>
 
-	<p>Lauren Armstrong is a recent college graduate living in Boston. She was born and raised in Seattle, WA, but relocated to Providence, RI, to pursue her undergraduate degree at Brown University. She graduated in 2013 from Brown with a degree in Comparative Literature. </p>
+	<p>I'm all about the ideas.</br> I can't stop myself from thinking about new ideas, breaking apart what makes an idea great, and reconstructing an idea to fit new contexts. </br>Visual thinking helps me map out these ideas and roasted & salted cashews help me sustain my blood sugar.</p>
 
-	<a href="http://tinypic.com?ref=2rdkpvm" target="_blank"><img src="http://i58.tinypic.com/2rdkpvm.jpg" border="0" alt="Image and video hosting by TinyPic"></a>
+	<img src="images/laurenarmstrongheadshot.jpg" class="headshot" alt="Lauren Armstrong">
 
 </body>
 </html>
