CSS changes for Coffee site and Coffee site images

--- a/Coffee/index.html
+++ b/Coffee/index.html
@@ -10,8 +10,8 @@
 	<h1>
 	<div id="dream">
 	dream</div>
-	<div class="title">
-	Beans
+	<div class="title"><span>
+	Beans</span>
 	</div>
 	<div class="title">Caffe</div>
 </h1>
