Updates to personal portfolio site, many items commented out for the time being. New use of Google Fonts, visible in header.

--- a/index.html
+++ b/index.html
@@ -4,23 +4,74 @@
 <head>
 	<title>Lauren Bowes Armstrong</title>
 	<meta charset="utf-8">
-	<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+	<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'>
+	<link href="css/stylesheet.css" type="text/css" rel="stylesheet"/>
+
+
+<!--
+	<script type="text/javascript" src='script/Library/jquery-1.11.0.min.js'></script>
+
+	<link rel="stylesheet" href="css/jquery.fancybox.css" type="text/css" media="screen" />
+
+	<script type="text/javascript" src="script/jquery.fancybox.pack.js"></script>
+	
+	<link rel="text/javascript" href="script/lightbox.js" />
+-->
 </head>
 
 <body>
+
+<h1>LAUREN BOWES ARMSTRONG</h1>
+
+<p>Please excuse the appearance of this site. It is currently underconstruction. </br>For information about Lauren Bowes Armstrong, please contact Lauren directly by <a href="mailto:laurenbowesarmstrong@gmail.com">email</a>.</p>
+
+
+<!--
+
 <nav>
 	<ul class="menu">
-		<li>about</li>
-		<li>portfolio</li>
-		<li>contact</li>
+		<li><a href='#'><span>About</span></a></li>
+		<li><a href='#'><span>Process</span></a></li>
+		<li><a href='#'><span>Portfolio</span></a></li>
+		<li><a href='#'><span>Contact</span></a></li>
 	</ul>
 </nav>
 
-	<h1>Hi. I'm Lauren.</h1>
+<header>
 
-	<p>I'm all about the ideas.</br> I can't stop myself from thinking about new ideas, breaking apart what makes an idea great, and reconstructing an idea to fit new contexts. </br>Visual thinking helps me map out these ideas and roasted & salted cashews help me sustain my blood sugar.</p>
+	<h1 id="title">lauren armstrong</h1>
 
+	<div>
+		<a href="large_image.jpg" class="fancybox" title="Geometric Research"><img src="https://static.squarespace.com/static/52435a3ee4b0f585f0e6bc48/52435ae3e4b0314d3270dc49/52448d63e4b0c55940eccbe7/1380224357459/04%20study%20model.jpg?format=500w" /></a>
+		
+	</div>
+
+</header>
+
+<section id="About">
+	<h1>About</h1>
+	<p>I'm all about the ideas.</br> </br>I can't stop myself from thinking about new ideas, breaking apart what makes an idea great, and reconstructing an idea to fit new contexts. </br></br>Visual thinking helps me map out these ideas and roasted & salted cashews help me sustain my blood sugar.</p>
+</section>
+
+<section id="Process">
+	<h1>Process</h1>
+	<p>Chillwave ennui mixtape yr, vegan literally readymade fanny pack farm-to-table typewriter. Lomo leggings tousled seitan 8-bit sartorial chillwave XOXO, American Apparel food truck mixtape you probably haven't heard of them. DIY Marfa plaid, umami swag normcore hoodie polaroid. Ethnic meh Williamsburg fingerstache. PBR DIY asymmetrical tattooed, blog Wes Anderson kale chips. </p>
+</section>
+	
+<section id="Portfolio">
+	<h1>Portfolio</h1>
+	<img src="https://static.squarespace.com/static/52435a3ee4b0f585f0e6bc48/52435ae3e4b0314d3270dc49/52448d7be4b0c55940eccc30/1380224381651/09%20model.jpg?format=500w" alt="Interior Space Architecture">
+</section>
+
+<section id="Contact">
+	<h1>Contact</h1>
+	<p>email: laurenbowesarmstrong@gmail.com</p>
 	<img src="images/laurenarmstrongheadshot.jpg" class="headshot" alt="Lauren Armstrong">
+</section>
 
+
+-->
 </body>
 </html>
